--- a/css/demo.css
+++ b/css/demo.css
@@ -25,6 +25,9 @@
     --fs-header:1.2rem;
     --fs-icon: 5rem;
     /* COLOR */
+    
+    --cl-content: #9695a7;
+    --cl-title: #e4e4e4;
     --cl-btn: rgb(94, 94, 119);
     --cl-btn-bg: #16151f;
     --cl-btn-active: rgb(255, 255, 255);
@@ -35,6 +38,9 @@
     /* BOX SHADOW */
     --bs-neu: -6px -6px 20px rgba(255, 255, 255, 0.1),
                6px  6px 20px rgba(0, 0, 0, 0.5);
+    --bs-btn-neu: -6px -6px 20px rgba(0, 195, 255, 0.2),
+                    6px  6px 20px rgba(0, 0, 0, 0.5);
+
     --bs-neu-inset: -6px -6px 20px rgba(255, 255, 255, 0.1) inset,
                      6px  6px 20px rgba(0, 0, 0, 0.5) inset;
     --ts-tag: 0px 0px 5px rgb(92, 230, 154);
@@ -194,27 +200,6 @@ ul {
     background: #1f1d2b;
     position: relative;
 }
-/* SEARCH OVERLAY*/
-.search-overlay {
-    width: 100%;
-    height: 100%;
-    background: #1f1d2b;
-    position: absolute;
-    top: 0;left: 0;
-    z-index: -1;
-    overflow-y: hidden;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.4s ease-in-out;
-
-    text-align: center;
-    padding: 3vh 20px 0;
-}
-.show_search {
-    z-index: 50;
-    opacity: 1;
-    visibility: visible;
-}
 /* HEADER */
 .header {
     padding: 5vh 0;
@@ -234,7 +219,7 @@ ul {
     }
 
     /* ADD NOTE BTN */
-    #add {
+    #add-note {
         position: fixed;
         bottom: 50px;right: 40px;
         z-index: 10;
@@ -245,12 +230,21 @@ ul {
                     0px 0px 10px #3369ffe1;
     }
     /* NOTE STYLE */
+    /* EMPTY MESSAGE */
+    .message {
+        text-align: center;
+        color: #9695a7;
+    }
+    .empty_toggle {
+        display: none;
+    }
     .note {
         background-color: #272636;
         padding: 20px;
         border-radius: 20px;
         color: #9695a7;
         box-shadow: var(--bs-neu);
+        word-break: break-all;
         margin-bottom: 5vh;
         transition: 0.4s ease-in-out;
     }
@@ -281,3 +275,99 @@ ul {
             /* text-shadow: var(--ts-tag); */
             font-weight: var(--fw-extra-normal);
         }
+
+/* SEARCH OVERLAY*/
+.search-overlay,
+.add-note-overlay {
+    width: 100%;
+    height: 100%;
+    background: #1f1d2b;
+    position: absolute;
+    top: 0;left: 0;
+    z-index: -1;
+    overflow-y: hidden;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.4s ease-in-out;
+
+    text-align: center;
+    padding: 3vh 20px 0;
+}
+.show_overlay {
+    z-index: 50;
+    opacity: 1;
+    visibility: visible;
+}
+
+/* ADD NOTE  */
+.add-note-overlay {
+    padding-top: 0;
+}
+.add-note-overlay .title {
+    font-size: var(--fs-h1);
+    text-align: center;
+    padding-bottom: 3vh;
+}
+
+/* ADD NOTE FORM */
+.add-note-form {
+    font-size: var(--fs-body-big);
+    text-align: left;
+}
+.form-group {
+    margin-bottom: 3vh;
+}
+.add-note-form label,
+.add-note-form input,
+.add-note-form textarea {
+    display: block;
+    font-family: inherit;
+}
+.add-note-form textarea {
+    height: 200px;
+    resize: none;
+}
+.input-field__wrapper   {
+    border-radius: 20px;
+    box-shadow: var(--bs-neu);
+}
+.input-field {
+    width: 100%;
+    border-radius: 20px;
+    outline: none;
+    border: 5px solid var(--cl-btn-bg);
+    box-shadow: var(--bs-neu-inset);
+    background-color: var(--cl-btn-bg);
+    color: var(--cl-content);
+    font-size: var(--fs-body-big);
+    padding: 15px 10px;
+}
+.add-note-form label {
+    color: var(--cl-title);
+    padding-bottom: 10px;
+}
+.add-note-form input {
+    height: inherit;
+}
+/* FORM BTN */
+.btn-group {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.form-btn__wrapper {
+    border-radius: 20px;
+    box-shadow: var(--bs-btn-neu);
+}
+.form-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    background: #3369ff;
+    color: var(--cl-btn-bg);
+    font-weight: var(--fw-extra-bold);
+    /* box-shadow: var(--bs-btn-neu-inset); */
+}
