--- a/css/demo.css
+++ b/css/demo.css
@@ -25,7 +25,7 @@
     --fs-header:1.2rem;
     --fs-icon: 5rem;
     /* COLOR */
-    
+    --cl-bg: #1f1d2b;
     --cl-content: #9695a7;
     --cl-title: #e4e4e4;
     --cl-btn: rgb(94, 94, 119);
@@ -65,7 +65,7 @@ html {
 body {
     font-family: var(--ff-normal);
     line-height: 1.5;
-    background: #1f1d2b;
+    background: var(--cl-bg);
 }
 a {
     display: inline-block;
@@ -201,8 +201,8 @@ ul {
 
 /* MAIN WRAPPER */
 .main {
-    width: 100%;
-    background: #1f1d2b;
+    width: 100%;height: 100%;
+    background: var(--cl-bg);
 }
 .main-wrapper {
     max-width: 500px;
@@ -400,9 +400,14 @@ ul {
     background: #3369ff;
     color: var(--cl-btn-bg);
     font-weight: var(--fw-extra-bold);
+    transition: 0.3s ease-in-out;
     /* box-shadow: var(--bs-btn-neu-inset); */
 }
-
+.form-btn-unactive {    
+    background: var(--cl-bg);
+    color: var(--cl-content);
+    pointer-events: none;
+}
 @media (min-width:800px) {
     .main-wrapper {
         max-width: 1000px;
