--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ ul {
     max-width: 500px;
     margin: 0 auto;
 
-    padding: 0 20px 5vh;
+    padding: 0 20px;
     position: relative;
 }
 
@@ -197,25 +197,29 @@ ul {
     /* display: flex; */
     transition: 0.3s ;
 }
-.show-note {
-    transform: translateX(0);
-}
-.show-folder {
-    transform: translateX(-50%);
-}
-    .main-content .note-wrapper,
-    .main-content .folder-wrapper {
+    .note-wrapper,
+    .folder-wrapper {
         float: left;
         width: 50%;
+        position: relative;
+        opacity: 0;
         /* min-height: 80vh; */
-        transition: 0.3s ease-in-out;
+        transition: opacity 0.3s ease-in-out;
     }
-/* .note-wrapper {
-    background-color: red;
-}
-.folder-wrapper {
-    background-color: green;
-} */
+    .note-wrapper {
+        left: 0;
+    }
+    .folder-wrapper {
+        left: -50%;
+    }
+    .show-note .note-wrapper {
+        opacity: 1;
+        z-index: 1;
+    }
+    .show-folder .folder-wrapper {
+        opacity: 1;
+        z-index: 1;
+    }
     /* NOTE STYLE */
     .message {
         display: block;
@@ -242,7 +246,7 @@ ul {
 
 
         margin-bottom: 5vh;
-        /* transition: 0.4s ease-in-out; */
+        /* transition: 0.4s; */
     }
     /* SELECTED NOTE */
     .note-wrapper .selected {
