--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ ul {
 }
 .main-wrapper {
     width: 100%;
-    max-width: 500px;
+    max-width: 400px;
     margin: 0 auto;
 
     padding: 0 20px;
@@ -252,9 +252,8 @@ ul {
         /* transition: 0.4s; */
     }
     /* SELECTED NOTE */
-    .note-wrapper .selected {
-        background-image: linear-gradient(#3b3b4d, #2e2e3d);
-        transition: 0.4s ease-in-out;
+    .note-list .selected {
+        border: 2px solid var(--cl-nav-link);
     }
         /* NOTE TITLE */
         .note__title {
@@ -285,35 +284,46 @@ ul {
             font-weight: var(--fw-extra-normal);
         }
         /* END NOTE STYLE */
-        /* FOLDER STYLE */
-        .folder-list {
-            width: 100%;
-            /* display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between; */
-        }
-        .folder-list .gutter-sizer {
-            width: 4%;
-        }
-        .folder {
-            width: 48%;
-            background-color: var(--cl-item);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            border-radius: 20px;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-            .folder__title {
-                text-align: center;
-                color: white;
-                text-transform: capitalize;
-                font-size: var(--fs-body-big);
-            }
-        /* END FOLDER */
+/* FOLDER STYLE */
+.folder-wrapper {
+    padding: 0 10vw;
+}
+.folder-list .selected {
+    border: 2px solid var(--cl-nav-link);
+}
+.folder-list {
+    width: 100%;
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; */
+}
+.folder-list .gutter-sizer {
+    width: 0;
+}
+.folder {
+    width: 100%;
+    background-color: var(--cl-item);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+
+    /* BREAK WORD WHEN TOO LONG */
+    word-break: break-word;
+    overflow-wrap: break-word;
+
+}
+    .folder__title {
+        text-align: center;
+        color: white;
+        text-transform: capitalize;
+        font-size: var(--fs-body-big);
+    }
+/* END FOLDER */
 .main-content::after {
     content: "";
     clear: both;
@@ -324,7 +334,8 @@ ul {
 /* OVERLAY */
 .add-note-overlay,
 .edit-note-overlay,
-.add-folder-overlay {
+.add-folder-overlay,
+.confirm-delete-overlay {
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -350,7 +361,8 @@ ul {
 }
 .add-note-wrapper,
 .edit-wrapper,
-#create_folder_form {
+#create_folder_form,
+#confirm_delete_form {
     width: 100%;
     max-width: 600px;
     background-color: var(--cl-nav-link);
@@ -397,6 +409,9 @@ ul {
     font-size: var(--fs-body-big);
     padding: 15px 10px;
 }
+.input-field::placeholder {
+    color: red;
+}
 .form label {
     padding-bottom: 10px;
     font-weight: var(--fw-extra-normal);
@@ -426,19 +441,42 @@ ul {
     color: var(--cl-content);
     pointer-events: none;
 }
-#folder-title {
+#folder-title{
     text-align: center;
+}
+#confirm_delete_form > span {
+    display: block;
+    text-align: center;
+    font-size: var(--fs-body-big);
+    padding-bottom: 30px;
 }
 #folder-title::placeholder {
     color: var(--cl-black);
 }
+
 
 @media (min-width:400px) {
     #create_folder_form {
         padding: 40px 20px;
     }
 }
+@media (min-width:500px) {
 
+}
+@media (min-width:550px) {
+    .main-wrapper {
+        max-width: 600px;
+    }
+    .folder-wrapper {
+        padding: 0 5vw;
+    }
+        .folder-list .gutter-sizer {
+            width: 4%;
+        }
+        .folder {
+            width: 48%;
+        }
+}
 @media (min-width:800px) {
     .main-wrapper {
         max-width: 1000px;
@@ -449,11 +487,19 @@ ul {
         .note {
             width: 48%;
         }
+        /* FOLDER */
+        .folder-wrapper .gutter-sizer {
+            width: 2%;
+        }
+        .folder {
+            width: calc(92% / 4);
+        }
 }
+
 @media (min-width:1200px) {
-    .main-wrapper {
+    /* .main-wrapper {
         max-width: 1300px;
-    }
+    } */
         .note-wrapper .gutter-sizer {
             width: 2%;
         }
@@ -463,12 +509,15 @@ ul {
 }
 @media (min-width:1400px) {
     .main-wrapper {
-        max-width: 1400px;
+        max-width: 1200px;
     }
         .note-wrapper .gutter-sizer {
             width: calc(8% / 3);
         }
         .note {
             width: 23%;
+        }
+        .folder-wrapper {
+            padding: 0 5vw;
         }
 }
